setup disconection flow

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -134,6 +134,11 @@ body {
     background-color: #2180d8;
 }
 
+.btn[disabled] {
+    background-color: #7AA7FF;
+    cursor: wait;
+}
+
 input {
     outline: none;
     background: none;
