--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -128,6 +128,7 @@ body {
     font-size: .9rem;
 
     cursor: pointer;
+    user-select: none;
 }
 
 .btn:hover {
@@ -158,6 +159,14 @@ input:focus {
 
 .error {
     color: #dd0044;
+}
+
+.text {
+    user-select: none;
+}
+
+.uppercase {
+    text-transform: uppercase;
 }
 
 .game-section {
